# advent-of-code-2020

./: .gitignore  README.md  adventOfCode2020.cabal  cabal.project  one-two.hs  three-two.hs  two-one.hs
src/: eight-one.hs  eight-two.hs  eighteen-one.hs  eighteen-two.hs  eleven-one.hs  eleven-two.hs  fifteen-one.hs  fifteen-two.hs  five-one.hs  five-two.hs  four-one.hs  four-two.hs  fourteen-one.hs  fourteen-two.hs  nine-one.hs  nine-two.hs  nineteen-one.hs  one-one.hs  seven-one.hs  seven-two.hs  seventeen-one.hs  seventeen-two.hs  six-one.hs  six-two.hs  sixteen-one.hs  sixteen-two.hs  ten-one.hs  ten-two.hs  thirteen-one.hs  thirteen-two.hs  three-one.hs  twelve-one.hs  twelve-two.hs  twenty-one.hs  twenty-two.hs  twentyfive-one.hs  twentyfour-one.hs  twentyfour-two.hs  twentyone-one.hs  twentyone-two.hs  (+5 more)
