name:		adventOfCode2020
version: 	1.0
cabal-version:	>= 1.6
description: 	Advent of Code Compilation
license: 	AllRightsReserved
license-file: 	LICENSE
copyright:
author:		Raul Gutierrez
maintainer: 	r.gutierrez@upm.es
build-type: 	Simple
stability:
homepage:
package-url:
synopsis:
category:
tested-with:
source-repository head
  type:     git
  location: https://github.com/raulgut/advent-of-code-2020.git

Executable one-one
  buildable: True
  main-is: one-one.hs
  build-depends: base
  hs-source-dirs: src

Executable one-two
  buildable: True
  main-is: one-two.hs
  build-depends: base
  hs-source-dirs: src

Executable two-one
  buildable: True
  main-is: two-one.hs
  build-depends: base, parsec
  hs-source-dirs: src

Executable two-two
  buildable: True
  main-is: two-two.hs
  build-depends: base, parsec
  hs-source-dirs: src

Executable three-one
  buildable: True
  main-is: three-one.hs
  build-depends: base, containers
  hs-source-dirs: src

Executable three-two
  buildable: True
  main-is: three-two.hs
  build-depends: base, containers
  hs-source-dirs: src

Executable four-one
  buildable: True
  main-is: four-one.hs
  build-depends: base, parsec
  hs-source-dirs: src

Executable four-two
  buildable: True
  main-is: four-two.hs
  build-depends: base, parsec
  hs-source-dirs: src

Executable five-one
  buildable: True
  main-is: five-one.hs
  build-depends: base
  hs-source-dirs: src

Executable five-two
  buildable: True
  main-is: five-two.hs
  build-depends: base
  hs-source-dirs: src

Executable six-one
  buildable: True
  main-is: six-one.hs
  build-depends: base
  hs-source-dirs: src

Executable six-two
  buildable: True
  main-is: six-two.hs
  build-depends: base
  hs-source-dirs: src

Executable seven-one
  buildable: True
  main-is: seven-one.hs
  build-depends: base, parsec
  hs-source-dirs: src

Executable seven-two
  buildable: True
  main-is: seven-two.hs
  build-depends: base, parsec
  hs-source-dirs: src

Executable eight-one
  buildable: True
  main-is: eight-one.hs
  build-depends: base, mtl
  hs-source-dirs: src

Executable eight-two
  buildable: True
  main-is: eight-two.hs
  build-depends: base, mtl
  hs-source-dirs: src

Executable nine-one
  buildable: True
  main-is: nine-one.hs
  build-depends: base
  hs-source-dirs: src

Executable nine-two
  buildable: True
  main-is: nine-two.hs
  build-depends: base
  hs-source-dirs: src

Executable ten-one
  buildable: True
  main-is: ten-one.hs
  build-depends: base, vector
  hs-source-dirs: src

Executable ten-two
  buildable: True
  main-is: ten-two.hs
  build-depends: base
  hs-source-dirs: src

Executable eleven-one
  buildable: True
  main-is: eleven-one.hs
  build-depends: base, matrix
  hs-source-dirs: src

Executable eleven-two
  buildable: True
  main-is: eleven-two.hs
  build-depends: base, matrix
  hs-source-dirs: src
